Fix all kinds of styling bugs. Chat input goes at the top, since chat messages scroll down. Status bar now looks sane in top 5 popular themes. Tab icon isn't covered up by text in default themes.

--- a/styles/icons.less
+++ b/styles/icons.less
@@ -25,6 +25,7 @@
 }
 
 .icon-floobits-conflicts {
+  padding-left: 22px;
   background: transparent url("atom://floobits/resources/icon_64x64.png") no-repeat;
   background-size: 20px;
   background-position-y: center;
