--- a/styles/messages.less
+++ b/styles/messages.less
@@ -7,19 +7,11 @@
 .floobits-messages-container {
   .chat-input-container {
     form {
-      .chat-input {
+      input.chat-input {
         width: 100%;
         border: none;
-        border-top: 1px solid #000;
-        position: absolute;
-        bottom: 4px;
-        left: 0;
-        right: 0;
         color: black;
         padding: 5px;
-      }
-      input {
-        width: 100%;
       }
     }
   }
